# zilliz-plugin

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  marketplace.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.sync/: manifest.yml
commands/: help.md  query.md  quickstart.md  status.md
docs/plans/: 2026-03-02-plugin-implementation.md  2026-03-02-plugin-redesign.md
plugins/zilliz/.claude-plugin/: plugin.json
plugins/zilliz/.codex-plugin/: plugin.json
plugins/zilliz/commands/: quickstart.md
skills/: backup.md  cluster.md  collection.md  import.md  index.md  project-region.md  setup.md  user-role.md
skills/alias/: SKILL.md
skills/ask-zilliz/: SKILL.md
skills/ask-zilliz/references/: api-patterns.md  auto-scaling.md  cluster-selection.md  developer-guide.md  enterprise-features.md  global-cluster.md  volume.md
skills/backup/: SKILL.md
skills/billing/: SKILL.md
skills/cluster/: SKILL.md
skills/collection/: SKILL.md
skills/database/: SKILL.md
skills/external-collection/: SKILL.md
skills/import/: SKILL.md
skills/index/: SKILL.md
skills/job/: SKILL.md
skills/monitoring/: SKILL.md
skills/on-demand-cluster/: SKILL.md
skills/partition/: SKILL.md
skills/project/: SKILL.md
skills/project-region/: SKILL.md
skills/role/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/user/: SKILL.md
skills/user-role/: SKILL.md
skills/vector/: SKILL.md
skills/volume/: SKILL.md
src/milvus_mcp/: __init__.py  server.py
(+14 files in other folders)
