[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milvus-mcp"
version = "0.1.0"
description = "Milvus MCP Server for Claude Code - Official plugin for Milvus/Zilliz Cloud"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Zilliz", email = "support@zilliz.com" }
]
keywords = ["milvus", "zilliz", "mcp", "claude", "vector-database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pymilvus>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/zilliztech/milvus-plugin"
Documentation = "https://github.com/zilliztech/milvus-plugin#readme"
Repository = "https://github.com/zilliztech/milvus-plugin"
Issues = "https://github.com/zilliztech/milvus-plugin/issues"

[project.scripts]
milvus-mcp = "milvus_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/milvus_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
